pkg/story/testdata/negative/missing_spec_ref.story
Meta
    Name:      Missing Spec-Ref Fixture
    Id:        missing_spec_ref_fixture
    Tags:      conformance
    Stations:  1

Scenario: Dummy scenario
    When  something happens
    Then  something is verified
